--- a/bootstrap/package.json
+++ b/bootstrap/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.3",
     "cross-env": "^7.0.3",
     "react": "^17.0.1",
+    "react-adsense": "^0.1.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
